src/styles/globals.scss
$blue: #6FCEF1;
$ygreen: #96CB57;
$green:#6FCF97;
$grey: #828282;
$dgrey: #6E6E70;
$white: #F2F2F2;

body{
  margin:0;
  background-color:$white;
  font-family: Rubik;
  color:#000;
}

.container{
  margin:0;
  padding:0;
}
.projImg{
  width:100vw;
}

h2{
  font-size: 1.8em;
  margin: 10px;
}
h3{
  font-size: 1.6em;
  margin: 40px; 
  color: $white;  
}
p{
  font-size: 1.4em;
  color: $white;
}
a{
  font-size: 1.4em;
  color:$blue;
  text-decoration:none; 
}

.desktop{
  text-align: center;
  width:100vw;
  margin: 0 auto;
  background-color: $blue;
  padding:20px;
  margin-top: 20px;
}
.mobile{
  text-align: center;
  width:100vw;
  margin: 0 auto;
  background-color: $green;
  // padding:20px;
  // margin: 20px 0;
}
.projText{
  text-align: center;
  background-color: $grey;
  color:$white;
  margin:40px 0;
  padding:10px;
  
  a:hover{
   color:$green; 
   text-decoration:none; 
   cursor:pointer;  
  }
}
@media (min-width:800px){
  h2{
    font-size: 3em;
    margin: 10px;
  }
  .projImg{
    width:40vw;
     margin: 20px;
   }
}

